--- a/appspec.yml
+++ b/appspec.yml
@@ -23,15 +23,15 @@ hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
   AfterInstall:
     - location: scripts/build_react_app.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
   ApplicationStart:
     - location: scripts/configure_nginx.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
     - location: scripts/start_nginx.sh
       timeout: 300
-      runas: ubuntu
+      runas: root
