--- a/appspec.yml
+++ b/appspec.yml
@@ -2,20 +2,10 @@
 version: 0.0
 os: linux
 files:
-  - source: /public/
-    destination: /var/www/html/react-app
-  - source: /appspec.yml
-    destination: /var/www/html/react-app
-  - source: /package.json
-    destination: /var/www/html/react-app
-  - source: /package-lock.json
-    destination: /var/www/html/react-app
-  - source: /scripts/
-    destination: /var/www/html/react-app
-  - source: /src/
-    destination: /var/www/html/react-app
+  - source: /
+    destination: /var/www/html/react-app 
 permissions:
-  - object: /var/www/html/react-app
+  - object: /
     pattern: "**"
     owner: ubuntu
     group: ubuntu
