--- a/appspec.yml
+++ b/appspec.yml
@@ -3,9 +3,17 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html/react-app
+    destination: /var/www/html
     overwrite: true
 file_exists_behavior: OVERWRITE
+permissions:
+   - object: /var/www/html
+     pattern: "**"
+     owner: root
+     group: root
+     mode: 755
+     type:
+       - file
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
