--- a/appspec.yml
+++ b/appspec.yml
@@ -1,31 +1,23 @@
-     
 version: 0.0
 os: linux
 files:
   - source: /
     destination: /var/www/html
-    overwrite: true
-file_exists_behavior: OVERWRITE
 permissions:
-   - object: /var/www/html
-     pattern: "**"
-     owner: root
-     group: root
-     mode: 755
-     type:
-       - file
+  - object: /var/www/html
+    pattern: "**"
+    owner: nginx
+    group: nginx
 hooks:
-   AfterInstall:
+  BeforeInstall:
+    - location: scripts/clear_nginx_cache.sh
+      timeout: 300
+      runas: root
+  AfterInstall:
     - location: scripts/build_react_app.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: scripts/configure_nginx.sh
-      timeout: 300
-      runas: root
     - location: scripts/start_nginx.sh
       timeout: 300
       runas: root
-      
-      
-      
