--- a/appspec.yml
+++ b/appspec.yml
@@ -2,18 +2,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html/WordPress
+    destination: /var/www/html/my-react-app
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
       runas: root
   AfterInstall:
-    - location: scripts/change_permissions.sh
-      timeout: 300
-      runas: root
-  ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
       runas: root
-
